// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsScreen component Should render the settings screen with the english locale 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginTop": 30,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "margin": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Settings
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 5,
        "paddingLeft": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#929292",
          "fontSize": 16,
        }
      }
    >
      Language
      :
    </Text>
    <View
      style={
        Object {
          "height": 40,
          "paddingLeft": 20,
          "width": 200,
        }
      }
    >
      <RCTPicker
        items={
          Array [
            Object {
              "label": "English",
              "textColor": undefined,
              "value": "en",
            },
            Object {
              "label": "Français",
              "textColor": undefined,
              "value": "fr",
            },
          ]
        }
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 5,
        "paddingLeft": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#929292",
          "fontSize": 16,
        }
      }
    >
      Hide fields related to tags
      :
    </Text>
    <View
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "borderColor": "red",
            "borderWidth": 1,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "margin": 5,
          "paddingLeft": 10,
        },
        Object {
          "bottom": 30,
          "position": "absolute",
          "right": 30,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#dcdcdc",
          "textAlign": "center",
        }
      }
    >
      v1.4.1
    </Text>
  </View>
</View>
`;

exports[`SettingsScreen component Should render the settings screen with the french locale 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginTop": 30,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "margin": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Paramètres
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 5,
        "paddingLeft": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#929292",
          "fontSize": 16,
        }
      }
    >
      Langue
      :
    </Text>
    <View
      style={
        Object {
          "height": 40,
          "paddingLeft": 20,
          "width": 200,
        }
      }
    >
      <RCTPicker
        items={
          Array [
            Object {
              "label": "English",
              "textColor": undefined,
              "value": "en",
            },
            Object {
              "label": "Français",
              "textColor": undefined,
              "value": "fr",
            },
          ]
        }
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={1}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 5,
        "paddingLeft": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#929292",
          "fontSize": 16,
        }
      }
    >
      Cacher les champs relatifs aux étiquettes
      :
    </Text>
    <View
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "borderColor": "red",
            "borderWidth": 1,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "margin": 5,
          "paddingLeft": 10,
        },
        Object {
          "bottom": 30,
          "position": "absolute",
          "right": 30,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#dcdcdc",
          "textAlign": "center",
        }
      }
    >
      v1.4.1
    </Text>
  </View>
</View>
`;
